Main menu upgrade: fix layout bug

--- a/mainMenuUpgrade/bem/layout/css/layout.css
+++ b/mainMenuUpgrade/bem/layout/css/layout.css
@@ -2,6 +2,7 @@
 	position: relative;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
+	min-width: 960px;
 }
 
 .layout_height_global {
